--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "amark",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://daffaraihanz.github.io/React_Amark/",
+  "homepage": "https://daffaraihanz.github.io/react-amark/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
